fixed Feynman title

--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
         <img class="feynman__smain-illustration" src="images/feynman.png" alt="A picture of Richard
         Feynman, a world-renowned quantum physicist. The Feynman Technique is derived from his studying methods when he was a
         student at Princeton.">
-        <div class="feynman__title"><h1>The Feynman Technique</h1></div>
-        <div class="feynman__subtitle"><h2>Learn without forgetting</h2></div>
+        <div class="feynman__title">The Feynman Technique</div>
+        <div class="feynman__subtitle">Learn without forgetting</div>
         <div class="feynman__link">More →</div>
       </section>
 <!-- לבודד פרטים של טבלה ולהוסיף מחלקה של קאופמן/דיג'יט -->
