make social icons look good

--- a/index.html
+++ b/index.html
@@ -184,18 +184,23 @@
                         <li>Mission</li>
                         <li>Professions</li>
                     </ul>
-                    <div class="footer__column_content-social"></div>
-                    <div>
-                        <ul class="footer__social-icons">
-                            <li></li>
-                        </ul>
-                    </div>
-                    <div class="footer__column-link"></div>
-
-
                 </div>
+                <div class="footer__column-link"></div>
+                <div class="footer__column_content-social">
+                    <div class="footer__column-heading">Social media</div>
+                    <ul class="footer__list">
+                        <li class="footer__column-link">
+                            <span><img src="images/facebook_white.svg" class="footer__social-icons" alt="facebook icon"></span>Facebook</li>
+                        <li class="footer__column-link">
+                            <img src="images/instagram_white.svg" class="footer__social-icons" alt="instagram icon">Instagram</li>
+                    </ul>
+                </div>
+
+
+
             </div>
-        </footer>
+    </div>
+    </footer>
     </div>
 </body>
 
