editing  overflow: hidden to the kaufman section

--- a/index.html
+++ b/index.html
@@ -200,6 +200,10 @@
             </div>
         </footer>
     </div>
+    <iframe src="https://yandex.com/maps/?um=constructor%3A8fc03e8e10b1117f4a5d3b164566b0d768d2e9d13ca1006b11877a7a491af367&amp;source=constructorStatic " target="_blank ">
+        <img src="https://api-maps.yandex.ru/services/constructor/1.0/static/?um=constructor%3A8fc03e8e10b1117f4a5d3b164566b0d768d2e9d13ca1006b11877a7a491af367&amp;width=600&amp;height=400&amp;lang=en_FR
+        " alt=" " style="border: 0; " />
+    </iframe>
 </body>
 
 </html>
