fixing errors by html validator

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="page">
         <header class="header">
-            <div class="logo logo_place_header"><img src="images/logo_place_header.png"></div>
+            <div class="logo logo_place_header"><img src="images/logo_place_header.png" alt="header's logo"></div>
             <h1 class="header__title">Learning How to Learn</h1>
             <h2 class="header__subtitle">The most effective, cutting-edge learning techniques that you can apply to your daily life. </h2>
             <div class="header__link"> Learn more →</div>
@@ -38,8 +38,8 @@
             </section>
 
             <section class="digits">
-                <div class="digits__section-title">Facts and figures</div>
-                <div class="digits__section-subtitle">On learning and the brain</div>
+                <h1 class="digits__section-title"> Facts and figures </h1>
+                <h2 class="digits__section-subtitle"> On learning and the brain </h2>
                 <ul class="digits__table">
                     <li class="digits__table-cell">
                         <div class="digits__table-heading">86 billion</div>
@@ -98,13 +98,13 @@
                 <img class="feynman__smain-illustration" src="images/feynman.png" alt="A picture of Richard
         Feynman, a world-renowned quantum physicist. The Feynman Technique is derived from his studying methods when he was a
         student at Princeton.">
-                <div class="feynman__title">The Feynman Technique</div>
-                <div class="feynman__subtitle">Learn without forgetting</div>
+                <h1 class="feynman__title">The Feynman Technique </h1>
+                <h2 class="feynman__subtitle"> Learn without forgetting </h2>
                 <div class="feynman__link">More →</div>
             </section>
             <section class="kaufman">
-                <div class="section-title_theme_dark">Ten principles of rapid skill acquisition</div>
-                <div class="section-subtitle_theme_dark">by Josh Kaufman</div>
+                <h1 class="section-title_theme_dark">Ten principles of rapid skill acquisition </h1>
+                <h2 class="section-subtitle_theme_dark"> by Josh Kaufman </h2>
                 <ul class="table__theme_dark">
                     <li class="table__cell_theme_dark">
                         <div class="table__heading_theme_dark">1</div>
@@ -174,7 +174,7 @@
             <div class="footer__narrow-width">
                 <div class="footer__column_content-copyrights">
                     <div class="logo logo_place_footer"><img src="images/logo_place_footer.png" alt="footers logo"></div>
-                    <div class="footer__author">&copy_2021 Eden BittBru</div>
+                    <div class="footer__author">&copy; 2021 Eden BittBru</div>
                 </div>
                 <div class="footer__column_content-about">
                     <div class="footer__column-heading">About Practicum by Yandex</div>
@@ -200,10 +200,6 @@
             </div>
         </footer>
     </div>
-    <iframe src="https://yandex.com/maps/?um=constructor%3A8fc03e8e10b1117f4a5d3b164566b0d768d2e9d13ca1006b11877a7a491af367&amp;source=constructorStatic " target="_blank ">
-        <img src="https://api-maps.yandex.ru/services/constructor/1.0/static/?um=constructor%3A8fc03e8e10b1117f4a5d3b164566b0d768d2e9d13ca1006b11877a7a491af367&amp;width=600&amp;height=400&amp;lang=en_FR
-        " alt=" " style="border: 0; " />
-    </iframe>
 </body>
 
 </html>
