--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
                 <div class="feynman__link">More →</div>
             </section>
             <section class="kaufman">
-                <h1 class="section-title_theme_dark">Ten principles of rapid skill acquisition </h1>
-                <h2 class="section-subtitle_theme_dark"> by Josh Kaufman </h2>
-                <ul class="table__theme_dark">
+                <h1 class="section-title section-title_theme_dark">Ten principles of rapid skill acquisition </h1>
+                <h2 class="section-subtitle section-subtitle_theme_dark"> by Josh Kaufman </h2>
+                <ul class="table table__theme_dark">
                     <li class="table__cell_theme_dark">
                         <div class="table__heading_theme_dark">1</div>
                         <ul class="table__text_theme_dark">
