--- a/index.html
+++ b/index.html
@@ -12,193 +12,173 @@
 <body>
     <div class="page">
         <header class="header">
-            <div class="logo logo_place_header"><img src="images/logo_place_header.png" alt="header's logo"></div>
+            <div class="logo logo_place_header"><img class="logo_img_header" src="images/logo_place_header.png" alt="header's logo"></div>
             <h1 class="header__title">Learning How to Learn</h1>
-            <h2 class="header__subtitle">The most effective, cutting-edge learning techniques that you can apply to your daily life. </h2>
-            <div class="header__link"> Learn more →</div>
-            <div class="header__smain-illustration"><img src="images/header-image.png" alt="Epic ponderer stood on a mountaintop
+            <div class="header__subtitle">
+                <p>The most effective, cutting-edge learning techniques that you can apply to your daily life.</p>
+                <p class="header__link"> Learn more →</p>
+            </div>
+            <img class="header__main-illustration" src="images/header-image.png" alt="Epic ponderer stood on a mountaintop
         deliberating over the finer points of the modern educational
         system, while also wondering where that giant blue square came
-        from."></div>
+        from.">
             <div class="header__square-pic"></div>
         </header>
         <main class="content">
             <section class="description">
                 <div class="two-columns">
-                    <h2 class="brief">The main problem with education</h2>
-                    <div class="main-text">
-                        <p>Whether it's at school or university, the one thing no one ever teaches you is how to teach yourself. We often just end up drilling specific exercises and mindlessly memorizing information so that when exam time comes around, we
+                    <h2 class="two-columns__brief">The main problem with education</h2>
+                    <div class="two-columns__main-text">
+                        <p class="two-columns__paragraph">Whether it's at school or university, the one thing no one ever teaches you is how to teach yourself. We often just end up drilling specific exercises and mindlessly memorizing information so that when exam time comes around, we
                             pass the test. But once the test is over, that information has outlived its usefulness, and there's no guarantee that information will be retained. In the end, we're really just learning how to pass our tests. </p>
-                        <p><span class="span-accent">Here's the real question:</span> does this approach of repetition and memorization help us truly understand the subject material? The academic consensus nowadays is that it doesn't. In fact, what's more
-                            important than any individual topic is knowing how to study, but for some reason, this point is often overlooked. So, what can we do to remedy this?</p>
-                        <p>Well, there are various techniques and exercises that can be applied to the educational process to help make it more efficient and engaging. Keep scrolling to uncover some of the secrets of effective learning.</p>
+                        <p class="two-columns__paragraph"><span class="two-columns__span-accent">Here's the real question:</span> does this approach of repetition and memorization help us truly understand the subject material? The academic consensus nowadays is that it doesn't. In fact,
+                            what's more important than any individual topic is knowing how to study, but for some reason, this point is often overlooked. So, what can we do to remedy this?</p>
+                        <p class="two-columns__paragraph">Well, there are various techniques and exercises that can be applied to the educational process to help make it more efficient and engaging. Keep scrolling to uncover some of the secrets of effective learning.</p>
                     </div>
                 </div>
             </section>
 
             <section class="digits">
-                <h1 class="digits__section-title"> Facts and figures </h1>
-                <h2 class="digits__section-subtitle"> On learning and the brain </h2>
-                <ul class="digits__table">
-                    <li class="digits__table-cell">
-                        <div class="digits__table-heading">86 billion</div>
-                        <ul class="digits__table-text">
-                            <li>The number of neurons in the human brain</li>
-                        </ul>
+                <h2 class="section-title"> Facts and figures </h2>
+                <p class="section-subtitle"> On learning and the brain </p>
+                <ul class="table">
+                    <li class="table-cell">
+                        <h4 class="table-heading">86 billion</h4>
+                        <p class="table-text">
+                            The number of neurons in the human brain
+                        </p>
                     </li>
-                    <li class="digits__table-cell">
-                        <div class="digits__table-heading">73%</div>
-                        <ul class="digits__table-text">
-                            <li>The percentage of adults in the US who consider themselves lifelong learners</li>
-                            <li>Pew Research Center</li>
-                        </ul>
+                    <li class="table-cell">
+                        <h4 class="table-heading">73%</h4>
+                        <p class="table-text">The percentage of adults in the US who consider themselves lifelong learners</p>
+                        <p class="table-text">Pew Research Center</p>
                     </li>
-                    <li class="digits__table-cell">
-                        <div class="digits__table-heading">1,000 terabytes</div>
-                        <ul class="digits__table-text">
-                            <li>The information storage capacity of a human</li>
-                        </ul>
+                    <li class="table-cell">
+                        <h4 class="table-heading">1,000 terabytes</h4>
+                        <p class="table-text">
+                            The information storage capacity of a human
+                        </p>
                     </li>
-                    <li class="digits__table-cell">
-                        <div class="digits__table-heading">500 trillion</div>
-                        <ul class="digits__table-text">
-                            <li>The number of nerve synapses responsible for learning in the average adult human</li>
-                        </ul>
+                    <li class="table-cell">
+                        <h4 class="table-heading">500 trillion</h4>
+                        <p class="table-text">
+                            The number of nerve synapses responsible for learning in the average adult human
+                        </p>
                     </li>
-                    <li class="digits__table-cell">
-                        <div class="digits__table-heading">420 million</div>
-                        <ul class="digits__table-text">
-                            <li>The number of adults under 25 with insufficient education for finding employment</li>
-                            <li>World Bank, 2017</li>
-                        </ul>
+                    <li class="table-cell">
+                        <h4 class="table-heading">420 million</h4>
+                        <p class="table-text">
+                            The number of adults under 25 with insufficient education for finding employment</p>
+                        <p class="table-text">World Bank, 2017</p>
                     </li>
-                    <li class="digits__table-cell">
-                        <div class="digits__table-heading">26 years old</div>
-                        <ul class="digits__table-text">
-                            <li>The age at which Albert Einstein published his groundbreaking paper on special relativity</li>
-                        </ul>
+                    <li class="table-cell">
+                        <h4 class="table-heading">26 years old</h4>
+                        <p class="table-text">
+                            The age at which Albert Einstein published his groundbreaking paper on special relativity
+                        </p>
                     </li>
-                    <li class="digits__table-cell">
-                        <div class="digits__table-heading">1885</div>
-                        <ul class="digits__table-text">
-                            <li>Development of the forgetting curve</li>
-                        </ul>
+                    <li class="table-cell">
+                        <h4 class="table-heading">1885</h4>
+                        <p class="table-text">
+                            Development of the forgetting curve
+                        </p>
                     </li>
-                    <li class="digits__table-cell">
-                        <div class="digits__table-heading">1897</div>
-                        <ul class="digits__table-text">
-                            <li>Publication of Ivan Pavlov's research on classical conditioning</li>
-                        </ul>
+                    <li class="table-cell">
+                        <h4 class="table-heading">1897</h4>
+                        <p class="table-text">
+                            Publication of Ivan Pavlov's research on classical conditioning
+                        </p>
                     </li>
                 </ul>
             </section>
 
             <section class="feynman">
-                <img class="feynman__smain-illustration" src="images/feynman.png" alt="A picture of Richard
+                <img class="feynman__main-illustration" src="images/feynman.png" alt="A picture of Richard
         Feynman, a world-renowned quantum physicist. The Feynman Technique is derived from his studying methods when he was a
         student at Princeton.">
-                <h1 class="feynman__title">The Feynman Technique </h1>
-                <h2 class="feynman__subtitle"> Learn without forgetting </h2>
-                <div class="feynman__link">More →</div>
+                <h2 class="feynman__title">The Feynman Technique </h2>
+                <p class="feynman__subtitle"> Learn without forgetting </p>
+                <a class="feynman__link">More →</a>
             </section>
+
             <section class="kaufman">
-                <h1 class="section-title section-title_theme_dark">Ten principles of rapid skill acquisition </h1>
-                <h2 class="section-subtitle section-subtitle_theme_dark"> by Josh Kaufman </h2>
-                <ul class="table table__theme_dark">
-                    <li class="table__cell_theme_dark">
-                        <div class="table__heading_theme_dark">1</div>
-                        <ul class="table__text_theme_dark">
-                            <li>Choose a lovable project</li>
-                        </ul>
+                <h2 class="section-title section-title_theme_dark">Ten principles of rapid skill acquisition </h2>
+                <p class="section-subtitle section-subtitle_theme_dark"> by Josh Kaufman </p>
+                <ul class="table table_theme_dark">
+                    <li class="table_cell_theme_dark">
+                        <h4 class="table_heading_theme_dark">1</h4>
+                        <p class="table_text_theme_dark">Choose a lovable project</p>
                     </li>
-                    <li class="table__cell_theme_dark">
-                        <div class="table__heading_theme_dark">2</div>
-                        <ul class="table__text_theme_dark">
-                            <li>Focus your energy on one skill at a time</li>
-                        </ul>
+                    <li class="table_cell_theme_dark">
+                        <h4 class="table_heading_theme_dark">2</h4>
+                        <p class="table_text_theme_dark"> Focus your energy on one skill at a time</p>
                     </li>
-                    <li class="table__cell_theme_dark">
-                        <div class="table__heading_theme_dark">3</div>
-                        <ul class="table__text_theme_dark">
-                            <li>Define your target performance level</li>
-                        </ul>
+                    <li class="table_cell_theme_dark">
+                        <h4 class="table_heading_theme_dark">3</h4>
+                        <p class="table_text_theme_dark">Define your target performance level</p>
                     </li>
-                    <li class="table__cell_theme_dark">
-                        <div class="table__heading_theme_dark">4</div>
-                        <ul class="table__text_theme_dark">
-                            <li>Deconstruct the skill into sub-skills</li>
-                        </ul>
+                    <li class="table_cell_theme_dark">
+                        <h4 class="table_heading_theme_dark">4</h4>
+                        <p class="table_text_theme_dark">
+                            Deconstruct the skill into sub-skills</p>
                     </li>
-                    <li class="table__cell_theme_dark">
-                        <div class="table__heading_theme_dark">5</div>
-                        <ul class="table__text_theme_dark">
-                            <li>Obtain critical tools</li>
-                        </ul>
+                    <li class="table_cell_theme_dark">
+                        <h4 class="table_heading_theme_dark">5</h4>
+                        <p class="table_text_theme_dark"> Obtain critical tools</p>
                     </li>
-                    <li class="table__cell_theme_dark">
-                        <div class="table__heading_theme_dark">6</div>
-                        <ul class="table__text_theme_dark">
-                            <li> Eliminate barriers to practice</li>
-                        </ul>
+                    <li class="table_cell_theme_dark">
+                        <h4 class="table_heading_theme_dark">6</h4>
+                        <p class="table_text_theme_dark"> Eliminate barriers to practice</p>
                     </li>
-                    <li class="table__cell_theme_dark">
-                        <div class="table__heading_theme_dark">7</div>
-                        <ul class="table__text_theme_dark">
-                            <li> Make dedicated time for practice</li>
-                        </ul>
+                    <li class="table_cell_theme_dark">
+                        <h4 class="table_heading_theme_dark">7</h4>
+                        <p class="table_text_theme_dark"> Make dedicated time for practice</p>
                     </li>
-                    <li class="table__cell_theme_dark">
-                        <div class="table__heading_theme_dark">8</div>
-                        <ul class="table__text_theme_dark">
-                            <li>TCreate fast feedback loops</li>
-                        </ul>
+                    <li class="table_cell_theme_dark">
+                        <h4 class="table_heading_theme_dark">8</h4>
+                        <p class="table_text_theme_dark">TCreate fast feedback loops</p>
                     </li>
-                    <li class="table__cell_theme_dark">
-                        <div class="table__heading_theme_dark">9</div>
-                        <ul class="table__text_theme_dark">
-                            <li>Practice by the clock in short bursts</li>
-                        </ul>
+                    <li class="table_cell_theme_dark">
+                        <h4 class="table_heading_theme_dark">9</h4>
+                        <p class="table_text_theme_dark"> Practice by the clock in short bursts </p>
                     </li>
-                    <li class="table__cell_theme_dark">
-                        <div class="table__heading_theme_dark">10</div>
-                        <ul class="table__text_theme_dark">
-                            <li>Emphasize quantity and speed</li>
-                        </ul>
+                    <li class="table_cell_theme_dark">
+                        <h4 class="table_heading_theme_dark">10</h4>
+                        <p class="table_text_theme_dark">Emphasize quantity and speed </p>
                     </li>
                 </ul>
-                <div class="kaufman__triangle"><img src="images/kaufman-triangle.svg" alt="blue triangle"></div>
+                <img class="kaufman__triangle" src="images/kaufman-triangle.svg" alt="blue triangle">
             </section>
         </main>
         <footer class="footer">
-            <div class="footer__narrow-width">
-                <div class="footer__column_content-copyrights">
+            <div class="footer__columns">
+                <div class="footer__columns footer__column_content_copyrights">
                     <div class="logo logo_place_footer"><img src="images/logo_place_footer.png" alt="footers logo"></div>
-                    <div class="footer__author">&copy; 2021 Eden BittBru</div>
+                    <p class="footer__author">&copy; 2021 Eden BittBru</p>
                 </div>
-                <div class="footer__column_content-about">
-                    <div class="footer__column-heading">About Practicum by Yandex</div>
+                <div class="footer__column footer__column_content_about">
+                    <h3 class="footer__column_heading">About Practicum by Yandex</h3>
                     <ul class="footer__list">
-                        <li>Home page</li>
-                        <li>Mission</li>
-                        <li>Professions</li>
+                        <li><a class="footer__column_link" href="#">Home page</a></li>
+                        <li><a class="footer__column_link" href="#">Mission</a></li>
+                        <li><a class="footer__column_link" href="#">Professions</a></li>
                     </ul>
                 </div>
-                <div class="footer__column-link"></div>
-                <div class="footer__column_content-social">
-                    <div class="footer__column-heading">Social media</div>
+                <div class="footer__column"></div>
+                <div class="footer__column footer__column_content_social">
+                    <h3 class="footer__column_heading">Social media</h3>
                     <ul class="footer__list">
-                        <li class="footer__column-link">
-                            <span><img src="images/facebook_white.svg" class="footer__social-icons" alt="facebook icon"></span>Facebook</li>
-                        <li class="footer__column-link">
-                            <img src="images/instagram_white.svg" class="footer__social-icons" alt="instagram icon">Instagram</li>
+                        <li class="footer__social_icons">
+                            <a class="footer__column_link" href="#"><img class="footer__social_icons" src="images/facebook_white.svg" alt="facebook icon">Facebook</a>
+                        </li>
+                        <li class="footer__social_icons">
+                            <a class="footer__column_link" href="#"><img class="footer__social_icons" src="images/instagram_white.svg" alt="instagram icon">Instagram</a>
+                        </li>
                     </ul>
                 </div>
 
-
-
-            </div>
         </footer>
-    </div>
+        </div>
 </body>
 
 </html>
